your commit message

--- a/index.html
+++ b/index.html
@@ -322,91 +322,90 @@
     <div class="container">
       <h2>Projects &amp; Artifacts</h2>
 
-      <!-- CRM -->
-      <article class="project" id="crm-automation">
-        <h3>CRM Automation — Email Outreach Platform</h3>
-        <div class="media">
-          <video controls playsinline>
-            <source src="Projects/CRM_DEMO_small.mp4" type="video/mp4">
-          </video>
-        </div>
-        <p>
-          I built a CRM that connects Google Sheets and Gmail so outreach basically runs itself. It pulls fresh rows from Sheets, fills a template with merge fields, batches sends to stay under Gmail limits, retries failures, and logs results back to the sheet. With it we hit <b>15,000+ contacts</b>, response rate lifted about <b>15%</b>, and total send time dropped to roughly <b>one-third</b> across three committees. New campaign = new sheet + a template. Simple, fast, and the team kept using it after I handed it off.
-        </p>
-      </article>
+    <!-- CRM -->
+<article class="project" id="crm-automation">
+  <h3>CRM Automation — Email Outreach Platform</h3>
+  <div class="media">
+    <video controls playsinline>
+      <source src="Projects/CRM_DEMO_small.mp4" type="video/mp4">
+    </video>
+  </div>
+  <p>
+    I built a CRM tool that connected Google Sheets and Gmail to fully automate email outreach. Before, campaigns took hours of manual effort. With the tool, we reached <b>15,000+ contacts</b>, improved response rates by <b>15%</b>, and cut send time by 3× across three committees. It was simple enough that the group kept using it after I handed it off, showing it was scalable and sustainable.
+  </p>
+</article>
 
-      <!-- Quokka (PDF slider) -->
-      <article class="project" id="quokka">
-        <h3>Quokka Brew — Can Design Research &amp; Iterations</h3>
-        <div class="media" id="quokka-viewer" data-pdf-files='["Projects/Quokka Brew.pdf"]'>
-          <button class="nav-arrow left" aria-label="Previous slide">❮</button>
-          <button class="nav-arrow right" aria-label="Next slide">❯</button>
-          <div class="badge" data-counter>Page 1/1</div>
-          <!-- canvas injected by JS -->
-        </div>
-        <p>
-          We ran <b>60+ interviews</b> then tested concepts with the <b>10-ft / 5-ft / 1-ft rule</b>. Signal was clear: calmer neutrals read more “coffee,” the logo and health callouts need to read at 5 ft, and flavor cues should be dead simple at 1 ft. We benchmarked against Rise, La Colombe, and Starbucks and turned that into <b>3 MVP layouts</b> plus variants the team could keep testing. My role was pulling the insights and pushing changes that actually show up on the can — bigger mark, clean info bands, and a flavor hierarchy you can catch fast.
-        </p>
-      </article>
+<!-- Quokka -->
+<article class="project" id="quokka">
+  <h3>Quokka Brew — Can Design Research &amp; Iterations</h3>
+  <div class="media" id="quokka-viewer" data-pdf-files='["Projects/Quokka Brew.pdf"]'>
+    <button class="nav-arrow left" aria-label="Previous slide">❮</button>
+    <button class="nav-arrow right" aria-label="Next slide">❯</button>
+    <div class="badge" data-counter>Page 1/1</div>
+  </div>
+  <p>
+    Quokka Brew is a student-founded coffee brand that needed a stronger shelf presence. I conducted <b>100+ customer interviews</b> and shelf tests, finding that only about <b>29%</b> of people could identify flavors from a distance. I helped design <b>20+ prototypes</b> with bigger logos, clear nutrition bands, and bold flavor colorways. Recognition rates jumped by <b>40%+</b> and the founders walked away with a scalable design system they could apply across SKUs.
+  </p>
+</article>
 
-      <!-- Clear Clinical (combined Mid + Final, single slider) -->
-      <article class="project" id="clear-clinical">
-        <h3>Clear Clinical — Product Strategy &amp; UX</h3>
-        <div class="media" id="cc-viewer" data-pdf-files='[
-          "Projects/MID SEMSESTER DELIVERABLE CLEAR CLINICAL.pdf",
-          "Projects/FINAL PRESENTATION CLEAR CLINICAL .pdf"
-        ]'>
-          <button class="nav-arrow left" aria-label="Previous slide">❮</button>
-          <button class="nav-arrow right" aria-label="Next slide">❯</button>
-          <div class="badge" data-counter>Page 1/1</div>
-          <!-- canvas injected by JS -->
-        </div>
-        <p>
-          Semester project focused on adoption. Interviews + competitive scan → a staged roadmap: nail the daily workflows first, then layer advanced features once the base is sticky. I framed trade-offs and laid out the first shippable version so a small team could move.
-        </p>
-      </article>
+<!-- Clear Clinical -->
+<article class="project" id="clear-clinical">
+  <h3>Clear Clinical — Product Strategy &amp; UX</h3>
+  <div class="media" id="cc-viewer" data-pdf-files='[
+    "Projects/MID SEMSESTER DELIVERABLE CLEAR CLINICAL.pdf",
+    "Projects/FINAL PRESENTATION CLEAR CLINICAL .pdf"
+  ]'>
+    <button class="nav-arrow left" aria-label="Previous slide">❮</button>
+    <button class="nav-arrow right" aria-label="Next slide">❯</button>
+    <div class="badge" data-counter>Page 1/1</div>
+  </div>
+  <p>
+    Clear Clinical is a skincare startup that wanted to scale digital sales. I led user interviews and surveys where about <b>30%</b> of respondents said credibility cues like before-and-after photos were most important. From that, I built a roadmap with short-term wins like trust-building content and a cleaner site flow, plus long-term moves like influencer partnerships and brand consistency. The plan gave the team a launch strategy backed by real data and early testing suggested engagement could grow by <b>30%+</b>.
+  </p>
+</article>
 
-      <!-- EY Workshop (image slider) -->
-      <article class="project" id="ey-workshop">
-        <h3>EY Workshop — Design Thinking</h3>
-        <div class="media" data-gallery='["Projects/EY1.JPG","Projects/EY2.JPG","Projects/EY3.JPG","Projects/EY4.JPG"]'>
-          <button class="nav-arrow left" aria-label="Previous photo">❮</button>
-          <button class="nav-arrow right" aria-label="Next photo">❯</button>
-          <div class="badge" data-counter>1/4</div>
-          <img alt="EY workshop — design thinking session" />
-        </div>
-        <p>
-          I put together a quick, hands-on workshop for high school students — frame the problem, sketch, test. Kept it practical so they could run it on their own ideas after.
-        </p>
-      </article>
+<!-- EY Workshop -->
+<article class="project" id="ey-workshop">
+  <h3>EY Workshop — Design Thinking</h3>
+  <div class="media" data-gallery='["Projects/EY1.JPG","Projects/EY2.JPG","Projects/EY3.JPG","Projects/EY4.JPG"]'>
+    <button class="nav-arrow left" aria-label="Previous photo">❮</button>
+    <button class="nav-arrow right" aria-label="Next photo">❯</button>
+    <div class="badge" data-counter>1/4</div>
+    <img alt="EY workshop — design thinking session" />
+  </div>
+  <p>
+    For EY’s mentorship program, I created and led a design thinking workshop for Title I high school students. I introduced a simple cycle of define, sketch, and test, guiding <b>50+ students</b> to build and present prototypes in a single session. Teachers later reused the workshop kit, showing it was scalable and impactful beyond just one classroom.
+  </p>
+</article>
 
-      <!-- Advocacy Day (image slider) -->
-      <article class="project" id="advocacy-day">
-        <h3>Policy Advocacy Day — Sacramento</h3>
-        <div class="media" data-gallery='["Projects/Partnership_Advocacy_Day1.JPG","Projects/Partnership_Advocacy_Day2.JPG"]'>
-          <button class="nav-arrow left" aria-label="Previous photo">❮</button>
-          <button class="nav-arrow right" aria-label="Next photo">❯</button>
-          <div class="badge" data-counter>1/2</div>
-          <img alt="Policy Advocacy Day — Sacramento" />
-        </div>
-        <p>
-          Met with legislators to share student stories and push for youth programs. I prepped the team, aligned the asks, and made sure voices in our community got in the room.
-        </p>
-      </article>
+<!-- Advocacy Day -->
+<article class="project" id="advocacy-day">
+  <h3>Policy Advocacy Day — Sacramento</h3>
+  <div class="media" data-gallery='["Projects/Partnership_Advocacy_Day1.JPG","Projects/Partnership_Advocacy_ Day2.JPG"]'>
+    <button class="nav-arrow left" aria-label="Previous photo">❮</button>
+    <button class="nav-arrow right" aria-label="Next photo">❯</button>
+    <div class="badge" data-counter>1/2</div>
+    <img alt="Policy Advocacy Day — Sacramento" />
+  </div>
+  <p>
+    With the Partnership for LA Schools, I helped lead a team of students to Sacramento to advocate for education equity. I prepared briefing docs and talking points, and coordinated meetings with <b>5 legislative offices</b>. In those sessions, I made sure students could share their personal stories while tying them to clear policy asks. The advocacy day opened doors for follow-up conversations and kept bills around school funding and accountability moving forward.
+  </p>
+</article>
 
-      <!-- Magazine (image slider) -->
-      <article class="project" id="magazine">
-        <h3>Magazine Feature</h3>
-        <div class="media" data-gallery='["Projects/Magazine1.JPG","Projects/Magazine2.JPG","Projects/Magazine3.JPG"]'>
-          <button class="nav-arrow left" aria-label="Previous photo">❮</button>
-          <button class="nav-arrow right" aria-label="Next photo">❯</button>
-          <div class="badge" data-counter>1/3</div>
-          <img alt="Magazine feature" />
-        </div>
-        <p>
-          A campus write-up on first-gen work, BTG projects, and why I like building with community partners. Nice to see the impact show up outside a resume line.
-        </p>
-      </article>
+<!-- Magazine -->
+<article class="project" id="magazine">
+  <h3>Magazine Feature</h3>
+  <div class="media" data-gallery='["Projects/Magazine1.JPG","Projects/Magazine2.JPG","Projects/Magazine3.JPG"]'>
+    <button class="nav-arrow left" aria-label="Previous photo">❮</button>
+    <button class="nav-arrow right" aria-label="Next photo">❯</button>
+    <div class="badge" data-counter>1/3</div>
+    <img alt="Magazine feature" />
+  </div>
+  <p>
+    I was featured in the Partnership for Los Angeles Schools’ 15-Year Anniversary Magazine. The piece introduced my journey as a first-generation student and highlighted the projects I’ve led in consulting, design, and advocacy. It gave people who had never heard of my work a clear picture of how I connect personal experience to measurable outcomes in communities and classrooms.
+  </p>
+</article>
+
 
     </div>
   </section>
